# Emergency-Response-System

./: CMakeLists.txt  README.md  flask_server.py  notes
includes/: aws.hpp  ecall.hpp  notificationService.hpp  server.hpp  vehicle.hpp
src/: aws.cpp  ecall.cpp  main.cpp  server.cpp
